# my-devpulse

./: build-pkg.sh  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: postinstall.sh  preinstall.sh
src-tauri/src/: main.rs  power_management.rs  setup.rs  terminal.rs
src/components/: AddServerModal.tsx  BackupSettings.tsx  ConfigureWakeOnLANModal.tsx  EditServerModal.tsx  Navbar.tsx  ServerActions.tsx  ServerCard.tsx  ServerList.tsx  ServerSidebar.tsx  SetupDialog.tsx  Terminal.tsx  TerminalDrawer.tsx  ThemeToggle.tsx
src/components/ui/: form.tsx  pagination.tsx
src/context/: ServerContext.tsx  ServerContext.types.ts  useServer.ts
src/hooks/: useEnvironmentCheck.ts  useServerMonitoring.ts
src/lib/: isTauri.ts  serverStorage.tauri.ts  serverStorage.ts  utils.ts
src/pages/: Index.tsx  Settings.tsx
src/store/: useTerminalDrawerStore.ts
src/types/: index.ts  tauri-api.d.ts
src/utils/: store.ts
