[package]
name = "my-devpulse"
version = "0.1.0"
description = "connetti al tuo server ovnque con facilita"
authors = ["Christian Koscielniak Pinto"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-log = "2.4.0"
tauri-plugin-fs = "2.3.0"
tauri-plugin-dialog = "2.2.2"  # ✅ VERSIONE CORRETTA
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
ssh2 = "0.9"
tokio = { version = "1.0", features = ["full", "sync"] } 
