[package]
name = "my-devpulse"
version = "1.0.0"
description = "DevPulse - Server Management Tool with PKG Installer"
authors = ["Christian Koscielniak Pinto"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
# ✅ Tauri Core SENZA macos-private-api
tauri = { version = "2.5.1", features = [] }
tauri-plugin-log = "2.4.0"
tauri-plugin-fs = "2.3.0"
tauri-plugin-dialog = "2.2.2"

# ✅ Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ✅ System & Time
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# ✅ SSH & Terminal (il tuo codice esistente)
ssh2 = "0.9"
once_cell = "1.19"

# ✅ Async Runtime
tokio = { version = "1.0", features = ["full", "sync"] }
